# mtTorrent

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  PropertySheet.props  README.md  gitPull.bat  mtTorrent.sln
Data/: default.css  index.html  index_.html  index__.html  innerH.html  sortTable.js  test.js
GuiLite/: AddPeerForm.h  Buttons.h  FileSelectionForm.h  FileSelectionForm.resx  GuiLite.vcxproj  GuiLite.vcxproj.filters  MagnetInputForm.h  MainForm.h  MainForm.resx  SettingsForm.h  ipclist  main.cpp
SdkExample/: CMakeLists.txt  SdkExample.vcxproj  main.cpp
SdkGuiExample/: CMakeLists.txt  SdkGuiExample.vcxproj  SdkGuiExample.vcxproj.filters  TorrentInstance.cpp  TorrentInstance.h  main.cpp
SdkTest/: SdkTest.vcxproj  main.cpp
countryIpListParser/: countryIpListParser.vcxproj  countryIpListParser.vcxproj.filters  ipclist  main.cpp
diagnosticsReport/: JsonDiagnostics.cpp  JsonDiagnostics.h  diagnosticsReport.vcxproj  diagnosticsReport.vcxproj.filters  json.hpp  main.cpp
diagnosticsReport/page/: index.html  reportTypes.js
mtTorrent/: AlertsManager.cpp  AlertsManager.h  BTProtocol.h  BencodeParser.cpp  BencodeParser.h  CMakeLists.txt  Communicator.cpp  Communicator.h  Configuration.cpp  Configuration.h  Core.h  DhtCommunication.cpp  DhtCommunication.h  DhtControl.h  DownloadManager.cpp  DownloadManager.h  ExtensionProtocol.cpp  ExtensionProtocol.h  Extensions.cpp  Extensions.h  HttpTrackerComm.cpp  HttpTrackerComm.h  IPeerListener.h  ITracker.h  Interface.cpp  Interface.h  Interface2.cpp  Interface2.h  InterfaceImpl.cpp  Logging.cpp  Logging.h  MetadataReconstruction.cpp  MetadataReconstruction.h  Network.cpp  Network.h  PacketHelper.h  PeerCommunication.cpp  PeerCommunication.h  PeerCommunication2.cpp  PeerCommunication2.h  (+50 more)
mtTorrent/Api/: Configuration.h  Core.h  FileTransfer.h  Interface.h  Listener.h  MagnetDownload.h  Peers.h  Torrent.h
mtTorrent/Core/: ActiveTorrent.h  AlertsManager.cpp  AlertsManager.h  BinaryInterfaceHandler.cpp  BinaryInterfaceInternal.cpp  Configuration.cpp  Configuration.h  Core.cpp  Core.h  DownloadStorage.cpp  DownloadStorage.h  Downloader.cpp  Downloader.h  ExtensionProtocol.cpp  ExtensionProtocol.h  ExternalRequestHandler.cpp  ExternalRequestHandler.h  FileTransfer.cpp  FileTransfer.h  Files.cpp  Files.h  HttpTrackerComm.cpp  HttpTrackerComm.h  HttpsTrackerComm.cpp  HttpsTrackerComm.h  IPeerListener.h  ITracker.h  IncomingPeersListener.cpp  IncomingPeersListener.h  Interface.cpp  Interface.h  JsonInterfaceHandler.cpp  LogFile.cpp  LogFile.h  Logging.cpp  Logging.h  MetadataDownload.cpp  MetadataDownload.h  MetadataReconstruction.cpp  MetadataReconstruction.h  (+38 more)
mtTorrent/Core/Api/: CoreImpl.cpp  FileTransferImpl.cpp  InterfaceImpl.cpp  ListenerImpl.cpp  MagnetDownloadImpl.cpp  PeersImpl.cpp  TorrentImpl.cpp
mtTorrent/Core/Dht/: Communication.cpp  Communication.h  DataListener.h  Listener.h  Node.cpp  Node.h  Query.cpp  Query.h  Responder.cpp  Responder.h  Table.cpp  Table.h
mtTorrent/Core/Diagnostics/: Diagnostics.cpp
mtTorrent/Core/Utp/: UtpManager.cpp  UtpManager.h  UtpStream.cpp  UtpStream.h
mtTorrent/Dht/: Communication.cpp  Communication.h  Query.cpp  Query.h  Table.cpp  Table.h
mtTorrent/Global/: BinaryInterface.cpp  BinaryInterface.h
mtTorrent/Public/: Alerts.h  BinaryInterface.cpp  BinaryInterface.h  JsonInterface.h  ModuleAllocator.h  ModuleArray.h  ModuleString.cpp  ModuleString.h  Status.h
mtTorrent/json/: picojson.h
mtTorrent/utils/: Bandwidth.cpp  Bandwidth.h  Base32.cpp  Base32.h  BencodeParser.cpp  BencodeParser.h  BencodeParserLite.cpp  BencodeParserLite.h  BencodeWriter.cpp  BencodeWriter.h  BigNumber.cpp  BigNumber.h  BitUtils.cpp  BitUtils.h  ByteSwap.cpp  ByteSwap.h  DataBuffer.cpp  DataBuffer.h  DiffieHellman.cpp  DiffieHellman.h  FastIpToCountry.cpp  FastIpToCountry.h  Filesystem.h  HexEncoding.cpp  HexEncoding.h  HttpHeader.cpp  HttpHeader.h  NetAdaptersList.cpp  NetAdaptersList.h  NetAdaptersListWin.cpp  Network.cpp  Network.h  PacketHelper.h  RC4.cpp  RC4.h  RiotRestApi.cpp  SHA.cpp  SHA.h  ScheduledTimer.cpp  ScheduledTimer.h  (+37 more)
mtTorrentGui/: AddPeerWindow.cpp  AddPeerWindow.h  AddPeerWindow.ui  CMakeLists.txt  CrossProcess.cpp  CrossProcess.h  FilesDataModel.cpp  FilesDataModel.h  FilesTab.cpp  FilesTab.h  IconResource.qrc  InfoTab.cpp  InfoTab.h  MagnetWindow.cpp  MagnetWindow.h  MagnetWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  NewTorrentWindow.cpp  NewTorrentWindow.h  NewTorrentWindow.ui  PeersDataModel.cpp  PeersDataModel.h  PeersTab.cpp  PeersTab.h  SettingsWindow.cpp  SettingsWindow.h  SettingsWindow.ui  SourcesDataModel.cpp  SourcesDataModel.h  SourcesTab.cpp  SourcesTab.h  SpeedTab.cpp  SpeedTab.h  TorrentDelegate.h  TorrentsDataModel.cpp  TorrentsDataModel.h  TorrentsList.cpp  TorrentsList.h  (+15 more)
mtTorrentGui/GeneratedFiles/: qrc_mtTorrentGui.cpp  ui_mtTorrentGui.h
mtTorrentGui/GeneratedFiles/Debug/: moc_TorrentDelegate.cpp  moc_mtTorrentGui.cpp
mtTorrentGuiLite/: Buttons.h  FileSelectionForm.h  MagnetInputForm.cpp  mtTorrentGuiLite.vcxproj
mtTorrentLiteGui/: AddPeerForm.cpp  AddPeerForm.h  AppCore.cpp  AppCore.h  AppCoreCallbacks.cpp  AppCoreCallbacks.h  Buttons.h  CrossProcessComm.h  FileSelectionForm.h  FileSelectionForm.resx  MagnetInputForm.h  MainForm.h  MainForm.resx  MttLibrary.h  ScheduleForm.cpp  ScheduleForm.h  SettingsForm.h  main.cpp  mtTorrentLiteGui.rc  mtTorrentLiteGui.vcxproj  mtTorrentLiteGui.vcxproj.filters  reg.txt  resource.h
mtTorrentLiteGui/Elements/: FileProgress.cpp  FileProgress.h  FileSelection.cpp  FileSelection.h  MagnetProgress.cpp  MagnetProgress.h  (+10 more)
mtTorrentTests/: Test.cpp  Test.h  main.cpp  mtTorrentTests.vcxproj  mtTorrentTests.vcxproj.filters
mtTorrentUi/: MyV8Handler.h  main.cpp  mtTorrentUi.vcxproj  mtTorrentUi.vcxproj.filters  mtUi.manifest  simple_app.cc  simple_app.h  simple_handler.cc  simple_handler.h  simple_handler_win.cc
mtTorrentWebUi/: main.cpp  mtTorrentWebUi.vcxproj  mtTorrentWebUi.vcxproj.filters
test/: main.cpp  mttLoader.h  test.vcxproj  test.vcxproj.filters  utils.cpp  utils.h
(+12 files in other folders)
